# link-header

./: .gitignore  Makefile  README.md  pyproject.toml
src/linkedge/: __init__.py  cli.py  exceptions.py  generator.py  models.py  palette.py  qr.py
src/linkedin_banner/: __init__.py  cli.py  exceptions.py  favicon.py  generator.py  models.py  palette.py  qr.py
